refactor to use data in the module pattern

--- a/templates/apcupsd.conf.erb
+++ b/templates/apcupsd.conf.erb
@@ -94,14 +94,14 @@ LOCKFILE /var/lock
 
 # SCRIPTDIR <path to script directory>
 #   Directory in which apccontrol and event scripts are located.
-SCRIPTDIR /etc/apcupsd
+SCRIPTDIR <%= @scriptdir %>
 
 # PWRFAILDIR <path to powerfail directory>
 #   Directory in which to write the powerfail flag file. This file
 #   is created when apcupsd initiates a system shutdown and is
 #   checked in the OS halt scripts to determine if a killpower
 #   (turning off UPS output power) is required.
-PWRFAILDIR /etc/apcupsd
+PWRFAILDIR <%= @scriptdir %>
 
 # NOLOGINDIR <path to nologin directory>
 #   Directory in which to write the nologin file. The existence
