--- a/templates/default-apcupsd.erb
+++ b/templates/default-apcupsd.erb
@@ -1,4 +1,4 @@
 # Defaults for apcupsd initscript : File managed by Puppet - DO NOT EDIT
 
-APCACCESS=<%= scope['apcupsd::apcaccess_executable'] %>
+APCACCESS=<%= @apcaccess_executable %>
 ISCONFIGURED=yes
