--- a/templates/changeme.erb
+++ b/templates/changeme.erb
@@ -16,6 +16,6 @@ MSG="$HOSTNAME UPS battery needs changing NOW."
    echo " "
    echo "$MSG"
    echo " "
-   /sbin/apcaccess status
+   <%= @apcaccess_executable %> status
 ) | $APCUPSD_MAIL -s "$MSG" $SYSADMIN
 exit 0
